fix button and remove blur on mobile phone

--- a/login.css
+++ b/login.css
@@ -134,6 +134,9 @@ button {
         height: 100vh;
         border: none;
         border-radius: 0;
+        transform: none;
+        -webkit-backdrop-filter: none;
+        backdrop-filter: none;
     }
 
     form {
@@ -151,5 +154,8 @@ button {
         height: 100vh;
         border: none;
         border-radius: 0;
+        transform: none;
+        -webkit-backdrop-filter: none;
+        backdrop-filter: none;
     }
 }
